fix: Fix campaign link overflow in mobile menu

--- a/assets/css/mobile-menu.css
+++ b/assets/css/mobile-menu.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: var(--dark-grey-color);
   height: 100%;
-  padding: 30px 70px;
+  padding: 30px;
 }
 
 .mobile-menu * {
